[package]
name = "ctflags"
version = "0.4.0"
edition = "2024"

[dependencies]
dirs = "*"
once_cell = "*"
md5 = "*"
tracing = "*"
pyo3 = { version = "*", features = ["extension-module", "abi3-py37"], optional = true }

[lib]
crate-type = ["lib", "staticlib", "cdylib"]

[features]
default = []
python = ["dep:pyo3"]
