[package]
name = "ctflags"
version = "0.4.0"
edition = "2024"

[dependencies]
dirs = "*"
once_cell = "*"
md5 = "*"
tracing = "*"
pyo3 = { version = "*", features = ["extension-module", "abi3-py37"], optional = true }
napi = { version = "2", default-features = false, features = ["napi4"], optional = true }
napi-derive = { version = "2", optional = true }

[build-dependencies]
napi-build = "2"

[lib]
crate-type = ["lib", "staticlib", "cdylib"]

[features]
default = []
python = ["dep:pyo3"]
node = ["dep:napi", "dep:napi-derive"]
